# custom-alphazero

./: .gitignore  .pre-commit-config.yaml  README.md  enable_env.sh  format.sh  install.sh  pyproject.toml  requirements.txt
custom_alphazero/: config.py  paths.py  self_play.py  train.py  utils.py  visualize_mcts.py
custom_alphazero/chess/: board.py  move.py  utils.py
custom_alphazero/connect_n/: board.py  move.py
custom_alphazero/evaluation/: evaluate.py
custom_alphazero/exact_solvers/: c4_exact_solver.py
custom_alphazero/mcts/: mcts.py
custom_alphazero/model/pytorch/: model.py
custom_alphazero/model/tensorflow/: base_layers.py  model.py  train.py
custom_alphazero/serving/: factory.py  inference_batch.py
custom_alphazero/serving/api/: best_model.py  inference.py  main.py  queue.py  run_id.py
custom_alphazero/serving/schemas/: example.py  schemas.py
results_2020-09-06-180343/evaluation/iteration_688/: meta.json  model.data-00000-of-00002  model.index
src/: config.py  paths.py  run.py  search_architecture.py  self_play.py  train.py  utils.py  visualize_mcts.py
src/chess/: board.py  move.py  utils.py
src/connect_n/: board.py  move.py
src/evaluation/: evaluate.py
src/exact_solvers/: c4_exact_solver.py  c4solver
src/mcts/: mcts.py  utils.py
src/model/pytorch/: base_layers.py  model.py
src/model/tensorflow/: base_layers.py  model.py  train.py
src/serving/: api.py  evaluate.py  example.py  factory.py  inference.py  inference_batch.py  schema.py  training.py
src/serving/api/: best_model.py  inference.py  main.py  queue.py  run_id.py
(+5 files in other folders)
