[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "custom-alphazero"
packages = [{include = "custom_alphazero"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.95.1"
graphviz = "^0.20.1"
joblib = "^1.2.0"
matplotlib = "^3.7.1"
protobuf = "3.20.3"
python = ">3.8.1,<3.11"
python-chess = "^1.999"
requests = "^2.30.0"
tensorflow = "2.7.1"
uvicorn = "^0.22.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pylint = "^2.15.7"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
toml-sort = "^0.20.1"
